# sigma_engine

./: Cargo.toml  README.md
.github/workflows/: test.yml
examples/: basic_matching.rs  modifier_demo.rs
src/: condition.rs  error.rs  lib.rs  matcher.rs  parser.rs  pipeline.rs  processor.rs  types.rs
tests/: sigma_rule_parsing.rs
