[package]
name = "sigma_engine"
version = "0.1.0"
edition = "2024"
description = "A performant Sigma rule parser and matching engine"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
